Fix z-index on annotorious annotations and fix positioning for citations view annotorious annotations

--- a/system/application/views/melons/cantaloupe/css/common.css
+++ b/system/application/views/melons/cantaloupe/css/common.css
@@ -1221,3 +1221,6 @@ a.cke_dialog_ui_button { padding: 6px 0 !important; }
 #wysiwygNewFeatures .close{
 	right: 0px;
 }
+body>.annotorious-popup{
+	z-index: 100 !important;
+}
